Update and rename 2025-04-05-init.md to 2025-04-04-init.md

--- a/_posts/2025-04-04-init.md
+++ b/_posts/2025-04-04-init.md
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: "Initialize blog"
-date: 2025-04-05
+date: 2025-04-04
 categories: test
 ---
 
-Intialization test
+Initialization test
