DAX Index -- Formula highlighting

--- a/_posts/2025-04-06-dax-index.md
+++ b/_posts/2025-04-06-dax-index.md
@@ -9,15 +9,21 @@ I was recently reviewing a chapter of Greg Deckler's DAX For Humans book and cam
 
 If a table has no duplicated rows, then this is not a difficult problem. You can use [ROWNUMBER](https://dax.guide/rownumber/), which supports ordering by multiple columns and will choose a default sort order over the table if you don't specify.
 
-```
+<!--
 ADDCOLUMNS ( Table1, "Index", ROWNUMBER ( Table1 ) )
-```
+-->
+<pre class="dax-code">
+<span class="function">ADDCOLUMNS</span><span class="parenthesis">(</span> <span class="table">Table1</span><span class="parenthesis">,</span> <span class="string">"Index"</span><span class="parenthesis">,</span> <span class="function">ROWNUMBER</span><span class="parenthesis">(</span> <span class="table">Table1</span> <span class="parenthesis">)</span> <span class="parenthesis">)</span>
+</pre>
 
 Let's consider the nontrivial case where we do have duplicate rows.
 
-```
+<!--
 Table1 = DATATABLE( "Col1", STRING, {{"A"}, {"B"}, {"B"}, {"C"}, {"C"}, {"C"}} )
-```
+-->
+<pre class="dax-code">
+<span class="plain">Table1 = </span><span class="function">DATATABLE</span><span class="parenthesis">(</span> <span class="string">"Col1"</span><span class="parenthesis">,</span> <span class="function">STRING</span><span class="parenthesis">,</span> <span class="parenthesis">{</span><span class="parenthesis">{</span><span class="string">"A"</span><span class="parenthesis">}</span><span class="parenthesis">,</span> <span class="parenthesis">{</span><span class="string">"B"</span><span class="parenthesis">}</span><span class="parenthesis">,</span> <span class="parenthesis">{</span><span class="string">"B"</span><span class="parenthesis">}</span><span class="parenthesis">,</span> <span class="parenthesis">{</span><span class="string">"C"</span><span class="parenthesis">}</span><span class="parenthesis">,</span> <span class="parenthesis">{</span><span class="string">"C"</span><span class="parenthesis">}</span><span class="parenthesis">,</span> <span class="parenthesis">{</span><span class="string">"C"</span><span class="parenthesis">}</span><span class="parenthesis">}</span> <span class="parenthesis">)</span>
+</pre>
 
 If we try ROWNUMBER here, we'll get an error:
 
@@ -25,9 +31,12 @@ If we try ROWNUMBER here, we'll get an error:
 
 We can substitute in RANK for ROWNUMBER but the result will have ties.
 
-```
+<!--
 ADDCOLUMNS ( Table1, "Index", RANK ( Table1 ) )
-```
+-->
+<pre class="dax-code">
+<span class="function">ADDCOLUMNS</span><span class="parenthesis">(</span> <span class="table">Table1</span><span class="parenthesis">,</span> <span class="string">"Index"</span><span class="parenthesis">,</span> <span class="function">RANK</span><span class="parenthesis">(</span> <span class="table">Table1</span> <span class="parenthesis">)</span> <span class="parenthesis">)</span>
+</pre>
 
 | Col1 | Rank |
 | --- | --- |
