--- a/_posts/2025-04-06-dax-index.md
+++ b/_posts/2025-04-06-dax-index.md
@@ -41,6 +41,8 @@ ADDCOLUMNS ( Table1, "Index", RANK ( Table1 ) )
 <span class="function">ADDCOLUMNS</span><span class="parenthesis">(</span> <span class="table">Table1</span><span class="parenthesis">,</span> <span class="string">"Index"</span><span class="parenthesis">,</span> <span class="function">RANK</span><span class="parenthesis">(</span> <span class="table">Table1</span> <span class="parenthesis">)</span> <span class="parenthesis">)</span>
 </pre>
 
+The table will look like this:
+
 | Col1 | Rank |
 | --- | --- |
 | A | 1 |
