--- a/_posts/2025-04-06-dax-index.md
+++ b/_posts/2025-04-06-dax-index.md
@@ -116,20 +116,20 @@ RETURN
 
 <pre class="dax-code">
 <span class="plain">DAX Index = </span>
-<span class="keyword">VAR</span> <span class="plain">__Expand =</span>
+<span class="keyword">VAR</span> <span class="variable">__Expand</span> <span class="operator">=</span>
     <span class="function">GENERATE</span><span class="parenthesis">(</span>
         <span class="function">DISTINCT</span><span class="parenthesis">(</span> <span class="table">Table1</span><span class="bracket">[</span><span class="column">Col1</span><span class="bracket">]</span> <span class="parenthesis">)</span><span class="parenthesis">,</span>
-        <span class="keyword">VAR</span> <span class="plain">_Count =</span> <span class="function">CALCULATE</span><span class="parenthesis">(</span> <span class="function">COUNTROWS</span><span class="parenthesis">(</span> <span class="table">Table1</span> <span class="parenthesis">)</span> <span class="parenthesis">)</span>
+        <span class="keyword">VAR</span> <span class="variable">_Count</span> <span class="operator">=</span> <span class="function">CALCULATE</span><span class="parenthesis">(</span> <span class="function">COUNTROWS</span><span class="parenthesis">(</span> <span class="table">Table1</span> <span class="parenthesis">)</span> <span class="parenthesis">)</span>
         <span class="keyword">RETURN</span>
-            <span class="function">GENERATESERIES</span><span class="parenthesis">(</span> <span class="number">1</span><span class="parenthesis">,</span> <span class="plain">_Count</span> <span class="parenthesis">)</span>
+            <span class="function">GENERATESERIES</span><span class="parenthesis">(</span> <span class="number">1</span><span class="parenthesis">,</span> <span class="variable">_Count</span> <span class="parenthesis">)</span>
     <span class="parenthesis">)</span>
-<span class="keyword">VAR</span> <span class="plain">__Index =</span>
+<span class="keyword">VAR</span> <span class="variable">__Index</span> <span class="operator">=</span>
     <span class="function">ADDCOLUMNS</span><span class="parenthesis">(</span>
-        <span class="plain">__Expand</span><span class="parenthesis">,</span>
-        <span class="string">"Index"</span><span class="parenthesis">,</span> <span class="function">RANK</span><span class="parenthesis">(</span> <span class="plain">__Expand</span> <span class="parenthesis">)</span> <span class="operator">+</span> <span class="bracket">[</span><span class="column">Value</span><span class="bracket">]</span> <span class="operator">-</span> <span class="number">1</span>
+        <span class="variable">__Expand</span><span class="parenthesis">,</span>
+        <span class="string">"Index"</span><span class="parenthesis">,</span> <span class="function">RANK</span><span class="parenthesis">(</span> <span class="variable">__Expand</span> <span class="parenthesis">)</span> <span class="operator">+</span> <span class="bracket">[</span><span class="column">Value</span><span class="bracket">]</span> <span class="operator">-</span> <span class="number">1</span>
     <span class="parenthesis">)</span>
 <span class="keyword">RETURN</span>
-    <span class="plain">__Index</span>
+    <span class="variable">__Index</span>
 </pre>
 
 Note: This also works for an entire table. Simply remove `[Col1]` in the formula above.
